	(PR#14071)

    o	curve() now allows 'expr' to be an object of mode "expression"
	as well as "call" and "function".

    o	The "POSIX[cl]t" methods for Axis() have been replaced by a
	single method for "POSIXt".

	There are no longer separate plot() methods for "POSIX[cl]t"
	and "Date": the default method has been able to handle those
	classes for a long time.  This iter alia allows a single
	date-time object to be supplied, the wish of PR#14016.

	The methods had a different default ("") for xlab.

    o	Classes "POSIXct", "POSIXlt" and "difftime" have generators
	.POSIXct(), .POSIXlt() and .difftime().	 Package authors are
	advised to make use of them (they are available from R 2.11.0)
	to proof against planned future changes to the classes.

	The ordering of the classes has been changed, so "POSIXt" is
	now the second class.  See the document 'Updating packages for
	changes in R 2.12.x' on developer.r-project.org for the
	consequences for a handful of CRAN packages.

    o	The "POSIXct" method of as.Date() allows a timezone to be
	specified (but still defaults to UTC).

    o	New list2env() utility function as an inverse of
	as.list(<environment>) and for fast multi-assign() to existing
	environment.  as.environment() is now generic and uses
	list2env() as list method.

    o	There are several small changes to output which 'zap' small
	numbers, e.g. in printing quantiles of residuals in summaries
	from "lm" and "glm" fits, and in test statisics in
	print.anova().

    o	Special names such as "dim", "names", etc, are now allowed as slot
	names of S4 classes, with "class" the only remaining exception.

    o	.Renviron can have architecture-specific versions such as
	.Renviron.i386 on systems with sub-architectures.

    o	installed.packages() has a new argument 'subarch' to filter on
	sub-architecture.

    o	The summary() method for packageStatus() now has a separate
	print() method.

    o	The default summary() method returns an object inheriting from